<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context="com.app.floppysoftware.benitogg.MenuFragment">

    <!-- Imagen de cabecera -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageViewPortada"
        android:src="@drawable/zeta_menu"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_jugar"
        android:id="@+id/buttonJugar"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_opciones"
        android:id="@+id/buttonOpciones"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_info"
        android:id="@+id/buttonInfo"
        />

</LinearLayout>
