<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context="com.app.floppysoftware.benitogg.MenuFragment">

    <!-- Imagen de cabecera -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageViewPortada"
        android:src="@drawable/zeta_menu"
        />

    <!-- El siguiente View, lo único que hace es tomar el espacio restante en
         vertical, para que la imagen de cabecera quede arriba,
         y los botones abajo. -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!--Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        /-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_vertical"
        android:text="@string/boton_jugar"
        style="@style/GameButton"
        android:id="@+id/buttonJugar"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_vertical"
        android:text="@string/boton_opciones"
        style="@style/GameButton"
        android:id="@+id/buttonOpciones"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_info"
        style="@style/GameButton"
        android:id="@+id/buttonInfo"
        />

</LinearLayout>
